-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.4, 5.13.0
-
-
da14688140550879e376e71cf273b16494e6c3c4 (qt/qtdeclarative/dev)
Qml Binding component is not working as expected with some variable types.
Please execute the attached sample,
Click on the button twice in a row. You will see that the text below the button is updated only with first click, but from the second time on the text stays unmodified.
Binding for Window type property is not working as expected.
- is duplicated by
-
QTBUG-80204 Binding is not working when 'value' goes to null.
-
- Closed
-
-
QTBUG-42888 Binding - null value
-
- Closed
-
-
QTBUG-83360 Fix nullptr handling in binding (backport)
-
- Closed
-